trabajando con la carpeta UI los registros suplidores y Productos ya realizados

--- a/Registro_Detalle6.csproj
+++ b/Registro_Detalle6.csproj
@@ -13,6 +13,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <!-- Imagenes -->
+    <Content Include="Imagenes\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
+
+  
 
 </Project>
